# django-pickled-model

./: README.md  README.rst  requirements.txt  setup.cfg
src/pickles/: admin.py  apps.py  forms.py  models.py
src/pickles/api/: urls.py  views.py
src/pickles/migrations/: 0001_initial.py  0002_alter_pickle_id.py  0003_delete_pickle.py  0004_pickle.py
tests/: test_api_views.py
