[metadata]
name = django-pickled-model
version = 1.0
description = Django pickled model provides you a model with dynamic data types.
long_description = file: README.rst
url = https://github.com/Amir-4m/django-pickled-model
project_urls =
    Bug Tracker = https://github.com/Amir-4m/django-pickled-model/issues
author = Amir Amiri
author_email = amiriamirr533@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    Django>=3.2, <3.3
    djangorestframework
    django-picklefield==3.0.1


[options.packages.find]
where = src

